fix Netlify deploy errors

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,8 +21,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
+    "noUncheckedSideEffectImports": true
   },
-  "include": ["src"],
+  "include": ["src", "public/rx7/rx7.tsx"],
   "exclude": ["./public/**/*"]
 }
